--- a/configuration.properties
+++ b/configuration.properties
@@ -8,6 +8,40 @@ api_bearer_token = eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJoYXNlbXBsb3llZSIsImF1dGgiOiJS
 
 
 
+employee_Username= Employee9
+employee_Password= Employee9
+descriptions_text = New Account Balance
+balance = 100
+
+
+
+
+
+
+
+
+
+
+
+
+
+employee_Username= Employee9
+employee_Password= Employee9
+descriptions_text = New Account Balance
+balance = 100
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
