--- a/configuration.properties
+++ b/configuration.properties
@@ -17,10 +17,23 @@ SSN_creat=329-44-6666
 
 
 
-
-
-
-
+employee_Username= Employee9
+employee_Password= Employee9
+descriptions_text= New Account Balance
+balance = 100
+date_username= tataramazan
+date_password= Gmi.123
+ssn1= 222-66-4444
+ssn2= 222-66-6666	
+ssn3= 222-66-6668	
+ssn4= 222-66-6660	
+ssn5= 222-66-6662
+middle= a
+phoneNumber= 123-123-0000
+zipCode= 00380
+ctiy= Helsinki
+dateInPast= 11.11.2020 23:00
+validDate = 11.12.2020 20:00
 
 
 
