--- a/configuration.properties
+++ b/configuration.properties
@@ -43,3 +43,4 @@ Basic4Password:Gmibank.1
 expectedchart1:background-color: rgb(255, 153, 0);
 expectedchart2:background-color: rgb(153, 255, 0);
 expectedchart3:background-color: rgb(0, 255, 0);
+endpointcountry = "https://www.gmibank.com/api/tp-countries"
