--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,14 @@
                     <executable>C:\Program Files\Java\jdk1.8.0_241\bin\javac</executable>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
